workspace_kk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:19:48 **** Incremental Build of configuration Debug for project CMSIS_CORE_LPC11xx ****
make -r all 
make: Nothing to be done for 'all'.
13:19:51 **** Incremental Build of configuration Debug for project DDL_Lab4 ****
make -r -j2 all 
Building file: ../src/crp.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0 -D__USE_CMSIS=CMSIS_CORE_LPC11xx -D__LPC11XX__ -D__REDLIB__ -I"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -specs=redlib.specs -MMD -MP -MF"src/crp.d" -MT"src/crp.o" -MT"src/crp.d" -o "src/crp.o" "../src/crp.c"
Building file: ../src/DDL_Lab4.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0 -D__USE_CMSIS=CMSIS_CORE_LPC11xx -D__LPC11XX__ -D__REDLIB__ -I"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -specs=redlib.specs -MMD -MP -MF"src/DDL_Lab4.d" -MT"src/DDL_Lab4.o" -MT"src/DDL_Lab4.d" -o "src/DDL_Lab4.o" "../src/DDL_Lab4.c"
../src/DDL_Lab4.c: In function 'PIOINT2_IRQHandler':
../src/DDL_Lab4.c:266:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
../src/DDL_Lab4.c:214:6: warning: 'TIMER32_0_IRQHandler' defined but not used [-Wunused-function]
 void TIMER32_0_IRQHandler(void){
      ^~~~~~~~~~~~~~~~~~~~
src/subdir.mk:24: recipe for target 'src/DDL_Lab4.o' failed
make: *** [src/DDL_Lab4.o] Error 1
make: *** Waiting for unfinished jobs....
Finished building: ../src/crp.c
 
13:37:47 **** Incremental Build of configuration Debug for project DDL_Lab4 ****
make -r -j2 all 
Building file: ../src/DDL_Lab4.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0 -D__USE_CMSIS=CMSIS_CORE_LPC11xx -D__LPC11XX__ -D__REDLIB__ -I"/home/kkuwata/Documents/MCUXpresso_10.2.1_795/workspace_kk/CMSIS_CORE_LPC11xx/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -specs=redlib.specs -MMD -MP -MF"src/DDL_Lab4.d" -MT"src/DDL_Lab4.o" -MT"src/DDL_Lab4.d" -o "src/DDL_Lab4.o" "../src/DDL_Lab4.c"
../src/DDL_Lab4.c: In function 'PIOINT2_IRQHandler':
../src/DDL_Lab4.c:266:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
../src/DDL_Lab4.c:214:6: warning: 'TIMER32_0_IRQHandler' defined but not used [-Wunused-function]
 void TIMER32_0_IRQHandler(void){
      ^~~~~~~~~~~~~~~~~~~~
src/subdir.mk:24: recipe for target 'src/DDL_Lab4.o' failed
make: *** [src/DDL_Lab4.o] Error 1
